--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node-fetch": "^3.0.0",
     "point-of-view": "^4.14.0",
     "yt-search": "^2.10.2",
-    "ytdl-core": "^4.9.1"
+    "ytdl-core": "^4.9.1",
+    "@discordjs/voice": "^0.6.0"
   },
   "engines": {
     "node": "16.x"
