--- a/package.json
+++ b/package.json
@@ -19,15 +19,8 @@
     "point-of-view": "^4.14.0",
     "yt-search": "^2.10.2",
     "ytdl-core": "^4.9.1",
-    "@discordjs/voice": "^0.6.0",
-    "ffmpeg": "^0.0.4",
-    "ffmpeg-static": "^4.4.0",
-    "sodium": "^3.0.2",
-    "@discordjs/opus": "^0.6.0",
-    "js-nacl": "^1.3.2",
-    "tweetnacl": "^1.0.3",
-    "libsodium": "^0.7.9",
-    "libsodium-wrappers": "^0.7.9"
+    "@discordjs/voice": "^0.6.0"
+  
   },
   "engines": {
     "node": "16.x"
